<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="10dp"
    >

<!--    <ImageView-->
<!--        android:layout_width="35dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:elevation="2dp"-->
<!--        android:src="@drawable/hexagon"-->
<!--        android:visibility="visible"-->
<!--        tools:ignore="MissingConstraints"-->
<!--        tools:layout_editor_absoluteX="16dp"-->
<!--        tools:layout_editor_absoluteY="210dp">-->

<!--    </ImageView>-->

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.462">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingTop="32dp"
            android:paddingEnd="32dp"
            android:paddingBottom="32dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">




                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fatura"
                    android:textColor="@color/rosa"
                    android:textStyle="bold">

                </TextView>
            </androidx.appcompat.widget.LinearLayoutCompat>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valor"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"></TextView>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/ic_baseline_monetization_on_24">

                </ImageView>

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/pagamento"
                    android:textColor="@color/cinza"
                    android:textStyle="bold">

                </TextView>

            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/ic_baseline_calendar_today_24">

                </ImageView>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/vencimento"
                    android:textColor="@color/cinza"
                    android:textStyle="bold">

                </TextView>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/parcelar"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="18dp"
                    android:background="@drawable/bg_button_parcelar"
                    android:text="@string/parcelar"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/pagar"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/bg_button_normal"
                    android:text="@string/pagar"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="95dp"
                    android:text="@string/lancamentos"
                    android:textColor="@color/cinza"
                    android:textStyle="bold">

                </TextView>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/continuar"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="40dp"
                    android:src="@drawable/ic_baseline_arrow_forward_ios_24"

                    />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>

